--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FirstThingFirst</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="box">
+            <div class="header">
+                <div class="text">
+                    <h1>Cim</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente ducimus culpa sed quae
+                        animi atque asperiores facilis. Saepe, nemo error! Temporibus provident excepturi nostrum
+                        impedit molestias, asperiores ducimus enim!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
