--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="box">
             <div class="header">
                 <div class="text">
-                    <h1>Cim</h1>
+                    <h1>Ez egy proba</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente ducimus culpa sed quae
                         animi atque asperiores facilis. Saepe, nemo error! Temporibus provident excepturi nostrum
                         impedit molestias, asperiores ducimus enim!</p>
